force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/RGPD_PurgeDonneesIdentification__e.object-meta.xml
<CustomObject>
    <label>RGPD_PurgeDonneesIdentification</label>
    <pluralLabel>RGPD_PurgeDonneesIdentifications</pluralLabel>
</CustomObject>