force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventId__c.field-meta.xml
<CustomField>
    <fullName>eventId__c</fullName>
    <description>c&apos;est l&apos;identifiant de l&apos;événement du Bus Kinesis Stream Purge</description>
    <label>eventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>