force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventSource__c.field-meta.xml
<CustomField>
    <fullName>eventSource__c</fullName>
    <description>Correspond à la source de l&apos;événement en provenance du stream</description>
    <label>eventSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>