force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventStatus__c.field-meta.xml
<CustomField>
    <fullName>eventStatus__c</fullName>
    <defaultValue>&quot;Nouveau&quot;</defaultValue>
    <description>Le status de traitement de l&apos;événement par le flow par défait l&apos;événement arrive en &quot;nouveau&quot;</description>
    <label>eventStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>