force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventSubType__c.field-meta.xml
<CustomField>
    <fullName>eventSubType__c</fullName>
    <description>correspond au sous type de l&apos;événement du stream purge (cf. Politique des DCP partie finalités )</description>
    <label>eventSubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>