force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventTime__c.field-meta.xml
<CustomField>
    <fullName>eventTime__c</fullName>
    <label>eventTime</label>
    <type>DateTime</type>
</CustomField>