force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventTimeStatus__c.field-meta.xml
<CustomField>
    <fullName>eventTimeStatus__c</fullName>
    <description>Correspond au timestamp du changement de statuts de l&apos;événement traité par Salesforce</description>
    <label>eventTimeStatus</label>
    <type>DateTime</type>
</CustomField>