force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <description>Correspond au type de l&apos;événement du stream purge pouvant contenir les valeurs suivantes : PurgeDonneesFines, PurgeDonneesIdentification, PurgeConsoMensEtFacturation</description>
    <label>eventType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>