force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/idContrat__c.field-meta.xml
<CustomField>
    <fullName>idContrat__c</fullName>
    <description>correspond à l&apos;Id Contrat du client auquel s&apos;applique l&apos;événement.</description>
    <label>idContrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>