force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/idDemande__c.field-meta.xml
<CustomField>
    <fullName>idDemande__c</fullName>
    <description>correspond à l&apos;Id Demande  qui est l&apos;identifiant pour notifier le stream purge que l&apos;action est réalisée</description>
    <label>idDemande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>