force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/idPortefeuilleContrat__c.field-meta.xml
<CustomField>
    <fullName>idPortefeuilleContrat__c</fullName>
    <label>idPortefeuilleContrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>