force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/idTiers__c.field-meta.xml
<CustomField>
    <fullName>idTiers__c</fullName>
    <description>correspond à l&apos;Id tiers du client auquel s&apos;applique l&apos;événement.</description>
    <label>idTiers</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>