force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/noBp__c.field-meta.xml
<CustomField>
    <fullName>noBp__c</fullName>
    <description>correspond numéro de BP du client auquel s&apos;applique l&apos;événement.</description>
    <label>noBp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>