force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/noContrat__c.field-meta.xml
<CustomField>
    <fullName>noContrat__c</fullName>
    <description>correspond au numéro de Contrat du client auquel s&apos;applique l&apos;événement.</description>
    <label>noContrat</label>
    <length>18</length>
    <type>Text</type>
</CustomField>