force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/noPortefeuilleContrat__c.field-meta.xml
<CustomField>
    <fullName>noPortefeuilleContrat__c</fullName>
    <label>noPortefeuilleContrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>