force-app/main/default/objects/RGPD_PurgeDonneesIdentification__e/fields/parentEventId__c.field-meta.xml
<CustomField>
    <fullName>parentEventId__c</fullName>
    <label>parentEventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>